test/valid/66128_sequence_returns_last/sequence_returns_last.mag
-- Author: 66128, Daniel Sousa

fun main (_) : Unit -> Unit =
    print(1; 2; 3)