test/invalid-syntax/66128_invalid_integer/invalid_integer.mag
-- Author: 66128, Daniel Sousa

-- Integers must be valid, and cannot contain letters

fun main (_) : Unit -> Unit = 
    const invalidInt : Int = --3;
    print(invalidInt);